fix crash: delete the Dialog and its child ListView in the applet dtor

The ListView object ownership is transferred to Dialog upon creation, so
not deleting the Dialog object in the applet dtor results in a leaked
ListView. However, when the leaked ListView receives a repaint signal on
plasma theme change, the model pointer in that view is already invalid,
which leads to the crash in m_model->rowCount().

BUG:299077
FIXED-IN:4.9.5